// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnimationsRoot snapshot tests should match snapshot with visited 1`] = `
<div
  className="animations tasks"
  data-testid="animations"
>
  <AnimationWrapper
    SvgAnimation={[Function]}
    className="tasks"
  />
  <AnimationWrapper
    SvgAnimation={[Function]}
    className="profile"
  />
  <AnimationWrapper
    SvgAnimation={[Function]}
    className="restaurant"
  />
  <AnimationWrapper
    SvgAnimation={[Function]}
    className="extensions"
  />
  <AnimationWrapper
    SvgAnimation={[Function]}
    className="chat"
  />
</div>
`;

exports[`AnimationsRoot snapshot tests should match snapshot without visited 1`] = `
<div
  className="animations "
  data-testid="animations"
>
  <AnimationWrapper
    SvgAnimation={[Function]}
    className="tasks"
  />
  <AnimationWrapper
    SvgAnimation={[Function]}
    className="profile"
  />
  <AnimationWrapper
    SvgAnimation={[Function]}
    className="restaurant"
  />
  <AnimationWrapper
    SvgAnimation={[Function]}
    className="extensions"
  />
  <AnimationWrapper
    SvgAnimation={[Function]}
    className="chat"
  />
</div>
`;
